welcome.lessons.welcome.bat.bool2.MaxMod5.scala.error
maxMod5:5: error: reassignment to val
	if (a=b) {
             ^